# fyah

./: Cargo.toml  README.md  flake.nix  fyah.toml  s.rs
.github/agents/: shared-context-code.agent.md  shared-context-plan.agent.md
.github/hooks/: bash-policy.json  diff-trace.json
.github/hooks/scripts/: bash-policy-presets.json  bash-policy.mjs  diff-trace.mjs
.github/prompts/: change-to-plan.prompt.md  commit.prompt.md  handover.prompt.md  next-task.prompt.md  validate.prompt.md
.github/skills/sce-atomic-commit/: SKILL.md
.github/skills/sce-bootstrap-context/: SKILL.md
.github/skills/sce-context-sync/: SKILL.md
.github/skills/sce-handover-writer/: SKILL.md
.github/skills/sce-plan-authoring/: SKILL.md
.github/skills/sce-plan-review/: SKILL.md
.github/skills/sce-task-execution/: SKILL.md
.github/skills/sce-validation/: SKILL.md
.opencode/command/: change-to-plan.md  commit.md  handover.md  next-task.md  validate.md
.opencode/skills/sce-atomic-commit/: SKILL.md
.opencode/skills/sce-bootstrap-context/: SKILL.md
.opencode/skills/sce-context-sync/: SKILL.md
.opencode/skills/sce-handover-writer/: SKILL.md
.opencode/skills/sce-plan-authoring/: SKILL.md
.opencode/skills/sce-plan-review/: SKILL.md
.opencode/skills/sce-task-execution/: SKILL.md
.opencode/skills/sce-validation/: SKILL.md
context/: architecture.md  brainstorm-sota-session-agents.md  context-management-sota.md  context-map.md  context-sota-papers.md  endpoints.md  fs-bridge.md  glossary.md  openai-chat-completions.md  overview.md  patterns.md  sota-references.md
context/plans/: agent-context-builder.md  agent-loop-fix.md  config-driven-steps-and-hooks.md  consolidate-tools-module.md  event-driven-fs-bridge.md  hook-system.md  interactive-state-transitions.md  llm-config-provider-architecture.md  runtime-watcher-channels.md  session-agent-loop.md  simplify-state-machine-approach.md  state-machine-runtime.md  tool-def-macro.md  tool-schema-tagged-enum.md  typed-tool-dispatch.md  typestate-compile-time-enforcement.md  unify-messages-tools.md
fyah-derive/: Cargo.toml
fyah-derive/src/: analyze.rs  codegen.rs  doc_comment.rs  lib.rs
src/: agent.rs  client.rs  config.rs  fs_watcher.rs  hooks.rs  main.rs  runtime.rs  session.rs  session_supervisor.rs  supervisor.rs  tools.rs  transport.rs  workspace.rs
src/agent/: actor.rs  client.rs  hooks.rs  interface.rs  mod.rs  skills.rs  tools.rs
src/context/: memory.rs  messages.rs  mod.rs  tools.rs
src/llm/: agent.rs  client.rs  config.rs  interface.rs  mod.rs  responses.rs  tools.rs
src/llm/providers/: anthropic.rs  openai.rs
src/server/: mod.rs  project.rs  routes.rs  session.rs
src/tools/: config.rs  mod.rs  registry.rs  types.rs
