[package]
name = "maia"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
ai = { path = "ai" }

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
chrono.workspace = true
clap = { version = "4.5.40", features = ["derive"] }

tokio = { version = "1.46.1", features = ["macros", "rt", "net", "io-util", "rt-multi-thread", "signal"] }

ai.workspace = true
axum = { version = "0.8.9", features = ["json", "ws"] }
utoipa = { version = "5.5.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

[workspace]
members = ["ai"]
