[workspace]
members = ["fyah-derive"]

[package]
name = "fyah"
version = "0.1.0"
edition = "2024"

[dependencies]
fyah-derive = { path = "fyah-derive" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-appender = "0.2"

chrono = { version = "0.4", features = ["serde"] }

reqwest = { version = "0.12", features = ["json"] }

clap = { version = "4.5.40", features = ["derive"] }

tokio = { version = "1.46.1", features = ["macros", "rt", "net", "rt-multi-thread", "signal", "process", "fs"] }
tokio-util = "0.7"

toml = "0.8"

futures = "0.3"
regex = "1.11"
ctrlc = "3.4"
uuid = { version = "1.23.3", features = ["v7"] }

notify = { version = "9.0.0-rc.4", features = ["serde"] }
notify-types = "2.1"
notify-debouncer-full = "0.8.0-rc.2"

[workspace.lints.clippy]
all = { level = "deny" }
pedantic = { level = "deny" }

[workspace.lints.rust]
warnings = "deny"
